# app/Http/Controllers/Controller.php
@@ -8,8 +8,16 @@ use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 use OpenApi\Annotations as OA;
 /**
+ * @OA\Server(url="http://localhost/api"),
  * @OA\Info(title="Transparência API", version="0.1")
+  * @OA\SecurityScheme(
+ *     type="http",
+ *     securityScheme="bearerAuth",
+ *     scheme="bearer",
+ *     bearerFormat="JWT"
+ * )
  */
+
 
 class Controller extends BaseController
 {
